@@ -1,20 +1,17 @@
 package com.enigma.lastbite.service.impl;
 
+import com.enigma.lastbite.constant.OrderStatus;
 import com.enigma.lastbite.dto.request.MenuItemReviewCreateRequest;
 import com.enigma.lastbite.dto.response.MenuItemReviewResponse;
-import com.enigma.lastbite.entity.MenuItem;
-import com.enigma.lastbite.entity.MenuItemReview;
-import com.enigma.lastbite.entity.SellerProfile;
-import com.enigma.lastbite.entity.User;
+import com.enigma.lastbite.dto.response.UnreviewedItemResponse;
+import com.enigma.lastbite.entity.*;
 import com.enigma.lastbite.exception.CustomException;
 import com.enigma.lastbite.exception.ErrorCode;
+import com.enigma.lastbite.mapper.MenuMapper;
 import com.enigma.lastbite.mapper.MenuReviewMapper;
 import com.enigma.lastbite.repository.MenuItemReviewRepository;
 import com.enigma.lastbite.security.JwtUtils;
-import com.enigma.lastbite.service.MenuItemReviewService;
-import com.enigma.lastbite.service.MenuItemService;
-import com.enigma.lastbite.service.SellerService;
-import com.enigma.lastbite.service.UserService;
+import com.enigma.lastbite.service.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Lazy;
@@ -23,7 +20,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,42 +37,107 @@ public class MenuItemReviewServiceImpl implements MenuItemReviewService {
     @Lazy
     private final SellerService sellerService;
     private final MenuItemService menuItemService;
+    private final OrderService orderService; // Pastikan OrderService di-inject
 
     @Override
     public MenuItemReviewResponse createReview(MenuItemReviewCreateRequest request) {
+        // 1. Dapatkan user yang sedang login
         String username = jwtUtils.getUsernameFromJwtToken(jwtUtils.getTokenFromHeader());
-        User user = userService.findByUsername(username)
+        User customer = userService.findByUsername(username)
                 .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
 
+        // 2. Validasi Order
+        Order order = orderService.findOrderByIdOrThrow(request.getOrderId());
+
+        // Validasi 2a: Pastikan order milik user yang login
+        if (!order.getCustomer().getId().equals(customer.getId())) {
+            throw new CustomException(ErrorCode.UNAUTHORIZED_REVIEW); // Atau error code yang lebih sesuai
+        }
+
+        // Validasi 2b: Pastikan order sudah selesai (COMPLETED)
+        if (!order.getOrderStatus().equals(OrderStatus.COMPLETED)) {
+            throw new CustomException(ErrorCode.ORDER_NOT_COMPLETED);
+        }
+
+        // 3. Validasi MenuItem
         MenuItem menuItem = menuItemService.findById(request.getMenuItemId());
 
-        if (menuItemReviewRepository.existsByCustomerIdAndMenuItemId(user.getId(), menuItem.getId())) {
+        // Validasi 3a: Pastikan menu item ada di dalam order tersebut
+        boolean isItemInOrder = order.getOrderItems().stream()
+                .anyMatch(item -> item.getMenuItem().getId().equals(request.getMenuItemId()));
+        if (!isItemInOrder) {
+            throw new CustomException(ErrorCode.MENU_ITEM_NOT_IN_ORDER); // Buat ErrorCode baru
+        }
+
+        // Validasi 4: Pastikan item ini belum direview untuk order ini
+        if (menuItemReviewRepository.existsByOrderIdAndMenuItemId(request.getOrderId(), request.getMenuItemId())) {
             throw new CustomException(ErrorCode.DUPLICATE_REVIEW);
         }
 
-        if (request.getRating() == null || request.getRating() < 1 || request.getRating() > 5) {
-            throw new CustomException(ErrorCode.INVALID_RATING);
-        }
-
-        MenuItemReview review = MenuReviewMapper.toMenuItemReviewEntity(request, user, menuItem);
-
+        // 5. Jika semua validasi lolos, buat dan simpan review
+        MenuItemReview review = MenuReviewMapper.toMenuItemReviewEntity(request, order, menuItem);
         menuItemReviewRepository.save(review);
 
+        // 6. Update rating rata-rata
         updateMenuItemAverageRating(menuItem.getId());
-
-        menuItemService.save(menuItem);
 
         return MenuReviewMapper.toMenuItemReviewResponse(review);
     }
 
+    // --- API BARU YANG ANDA MINTA ---
+    @Override
+    public List<UnreviewedItemResponse> getUnreviewedItemsForCustomer() {
+        // 1. Dapatkan user yang login
+        String username = jwtUtils.getUsernameFromJwtToken(jwtUtils.getTokenFromHeader());
+        User customer = userService.findByUsername(username)
+                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+
+        // 2. Dapatkan semua order yang sudah COMPLETED milik customer
+        //    (Anda perlu menambahkan metode ini di OrderService/Repository)
+        List<Order> completedOrders = orderService.findAllCompletedOrdersByCustomerId(customer.getId());
+
+        List<UnreviewedItemResponse> unreviewedItems = new ArrayList<>();
+
+        // 3. Iterasi setiap order yang sudah selesai
+        for (Order order : completedOrders) {
+            // 4. Dapatkan Set berisi ID semua menu item yang SUDAH direview untuk order ini
+            Set<String> reviewedMenuItemIds = menuItemReviewRepository.findAllByOrderId(order.getId())
+                    .stream()
+                    .map(review -> review.getMenuItem().getId())
+                    .collect(Collectors.toSet());
+
+            // 5. Iterasi setiap item di dalam order, lalu filter yang BELUM direview
+            order.getOrderItems().stream()
+                    .filter(orderItem -> !reviewedMenuItemIds.contains(orderItem.getMenuItem().getId()))
+                    .forEach(unreviewedOrderItem -> {
+                        UnreviewedItemResponse response = UnreviewedItemResponse.builder()
+                                .orderId(order.getId())
+                                .menuItem(MenuMapper.toMenuItemResponse(unreviewedOrderItem.getMenuItem())) // Gunakan mapper Anda
+                                .build();
+                        unreviewedItems.add(response);
+                    });
+        }
+
+        return unreviewedItems;
+    }
+
+
     @Override
     public void deleteReview(String reviewId) {
+        // Validasi tambahan: Hanya user yang membuat review yang boleh menghapus
+        String username = jwtUtils.getUsernameFromJwtToken(jwtUtils.getTokenFromHeader());
+        User customer = userService.findByUsername(username)
+                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+
         MenuItemReview review = menuItemReviewRepository.findById(reviewId)
                 .orElseThrow(() -> new CustomException(ErrorCode.REVIEW_NOT_FOUND));
 
+        if (!review.getOrder().getCustomer().getId().equals(customer.getId())) {
+            throw new CustomException(ErrorCode.UNAUTHORIZED);
+        }
+
         String menuItemId = review.getMenuItem().getId();
         menuItemReviewRepository.delete(review);
-
         updateMenuItemAverageRating(menuItemId);
     }
 
@@ -88,7 +153,7 @@ public class MenuItemReviewServiceImpl implements MenuItemReviewService {
         return menuItemReviewRepository.findAllByMenuItemId(menuItemId)
                 .stream()
                 .map(MenuReviewMapper::toMenuItemReviewResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private void updateMenuItemAverageRating(String menuItemId) {
@@ -112,3 +177,4 @@ public class MenuItemReviewServiceImpl implements MenuItemReviewService {
         sellerService.save(sellerProfile);
     }
 }
+
